Spacing fix and ID appearance fix

--- a/public/search/search.pug
+++ b/public/search/search.pug
@@ -39,7 +39,7 @@
             typeahead-on-select="search()")
 
         .form-group
-          date-search(data-title="DIed", data-field="deathDate")
+          date-search(data-title="Died", data-field="deathDate")
           input.input-sm.margin-top.form-control(
             type="text", 
             ng-model="query.deathPlace",
