--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -89,10 +89,7 @@
                   span(ng-bind-html="highlighted('fullName', e.alternateName)")
           
           .col-lg-12.col-md-4.col-sm-6
-            .panel.panel-default
-              .panel-heading Index
-              ul.list-group
-                li.list-group-item {{ entry.index }}
+            .panel.panel-default Index: {{ entry.index }}
 
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.dates[0].birthDate || entry.places[0].birthPlace")
             .panel.panel-default
@@ -154,7 +151,7 @@
               ul.list-group
                 li.list-group-item(ng-repeat="pr in entry.parents")
                   span(ng-if="!pr['Parent ID'] && !pr['Parent ID'] !== 0") {{pr.parents}}
-                  a(ng-if="pr['Parent ID']|| pr['Parent ID'] === 0", ng-href="{{ '#/entries/' + pr['Parent ID'] }}") {{pr.parent}}           
+                  a(ng-if="pr['Parent ID']|| pr['Parent ID'] === 0", ng-href="{{ '#/entries/' + pr['Parent ID'] }}") {{pr.parents}}           
           
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.marriages.length")
             .panel.panel-default
