--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -89,7 +89,7 @@
                   span(ng-bind-html="highlighted('fullName', e.alternateName)")
           
           .col-lg-12.col-md-4.col-sm-6
-            .panel.panel-default Index: {{ entry.index }}
+            .panel.panel-default EntryID: {{ entry.index }}
 
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.dates[0].birthDate || entry.places[0].birthPlace")
             .panel.panel-default
