--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -2,8 +2,6 @@
   .header
     .container
       h1 Grand Tour Explorer 
-        .small(style="display: inline; font-size: 24px; color: #d6bc73") Created by Giovanna Ceserani and Giorgio Caviglia
-        .small Explore the journeys and the lives of British and Irish travelers to eighteenth-century Italy
       button.btn.btn-lg.btn-lavender(ui-sref="search") Start exploring 
        i.fa.fa-angle-right
 
@@ -12,11 +10,11 @@
   .row
     .col-lg-12
 
-      p.text-serif A digital tool created and developed by Giovanna Ceserani and Giorgio Caviglia at CESTA (the Center for Spatial and Textual Analysis at Stanford University), with development contributions by Cody Leff, Ashwin Ramaswami, and Ryan Tan.
+      p.text-serif Many people contributed to making the Explorer a reality—see the full list of contributors for more details, but here we acknowledge the lead design and development of Giorgio Caviglia (2013-2015), and the further development and design work by Ashwin Ramaswami (2018-2023), Cody Leff (2015-2018), Raagavi Ragothaman (2023) and Ryan Tan (2019-2023).
       
-      h3 The Grand Tour Explorer is a dynamic and interactive resource for the exploration of eighteenth-century British travel to Italy. At its core is the digital transformation of the 5232 entries in 
-        em A Dictionary of British and Irish Travelers in Italy 1701-1800 
-        | (compiled by John Ingamells from the Brinsley Ford Archives at the Paul Mellon Center in London, YUP 1997). The dictionary's alphabetized print form is recast into a multidimensional digital database about the lives and journeys of more than 6000 travelers. As a research tool, the Grand Tour Explorer facilitates searching and browsing this mass of information; it organizes this information into structured and usable data; and it enables the analysis and visualization of this data.
+      //- h3 The Grand Tour Explorer is a dynamic and interactive resource for the exploration of eighteenth-century British travel to Italy. At its core is the digital transformation of the 5232 entries in 
+      //-   em A Dictionary of British and Irish Travelers in Italy 1701-1800 
+      //-   | (compiled by John Ingamells from the Brinsley Ford Archives at the Paul Mellon Center in London, YUP 1997). The dictionary's alphabetized print form is recast into a multidimensional digital database about the lives and journeys of more than 6000 travelers. As a research tool, the Grand Tour Explorer facilitates searching and browsing this mass of information; it organizes this information into structured and usable data; and it enables the analysis and visualization of this data.
 
 
       h3 This is an open access digital resource: you can explore freely, save the results of your explorations, and download the data for your further research. Learn more about the 
