--- a/gt-book/_layouts/home.html
+++ b/gt-book/_layouts/home.html
@@ -37,7 +37,7 @@
                         {% if chapter.link  %}
                           <a href="/gt-book{{ session.link }}{{ chapter.link }}">{{ chapter.name }}</a>
                         {% endif %}
-                        {% if chapter.external %}<a href="https://grand-tour-explorer-2017-alpha.herokuapp.com/" target="_blank">{{ chapter.name }}</a>{% endif %}
+                        {% if chapter.external %}<a href="https://grandtourexplorer.wc.reclaim.cloud/" target="_blank">{{ chapter.name }}</a>{% endif %}
                         {% if chapter.author  %}
                           <div class="chapter-author">
                             {{ chapter.author }}
@@ -52,7 +52,7 @@
               </div>
             {% endfor %}
             <div class="button">
-              <a href="https://grand-tour-explorer-2017-alpha.herokuapp.com/" target="_blank">Open the Grand Tour Explorer</a>
+              <a href="https://grandtourexplorer.wc.reclaim.cloud/" target="_blank">Open the Grand Tour Explorer</a>
             </div>
           </div>
 
