--- a/gt-book/_sass/_layout.scss
+++ b/gt-book/_sass/_layout.scss
@@ -85,10 +85,18 @@ a.site-title{
 
 .site-nav {
   z-index: 2;
+  height: 75vh;
   width: 280px;
+  min-width: 280px;
   background: #fafafa;
   font-size: 15px;
   padding: 40px;
+
+  overflow-x: hidden;
+  overflow-y: auto;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 
     a {
       color: $text-color;
@@ -149,6 +157,11 @@ a.site-title{
       color: #fff;
     }
 
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.site-nav::-webkit-scrollbar {
+  display: none;
 }
 
 .site-nav .toc .download-toc {
@@ -412,7 +425,14 @@ input[type="text"] {
  article {
     margin: 0 auto;
     max-width: $content-width;
-    padding: 60px 20px 0px 20px;
+    padding-top: 60px; 
+    padding-right: calc((100% - 1080px)/2);
+    padding-bottom: 0px;
+    padding-left: calc((100% - 1080px)/2);
+
+    height: 75vh;
+    width: 100%;
+    overflow-y: auto;
  }
 
 .post-header {
@@ -478,6 +498,18 @@ input[type="text"] {
             font-size: 18px;
         }
     }
+}
+
+.paragraph a:link {
+  color: #333;
+}
+
+.paragraph a:visited {
+  color: #333;
+}
+
+.paragraph a:hover {
+  color: #333;
 }
 
 .paragraph-links {
@@ -550,6 +582,9 @@ input[type="text"] {
 
 }
 
+.overlay-author {
+  color: darken($gold-color, 8%)
+}
 
 .overlay-close {
   position: absolute;
@@ -581,6 +616,27 @@ html {
   font-size: 16px;
     flex-direction: column;
     align-items: center;
+}
+
+.dataButton {
+  cursor: pointer;
+
+  color: white;
+  background-color: $gold-color;
+  
+  border-radius: 5px;
+  
+  height: fit-content;
+  width: fit-content;
+  margin: auto;
+  margin-bottom: 29px;
+  padding: 13px;
+  text-align: center;
+}
+
+.dataButton:hover {
+  color: darken(white, 4%);
+  background-color: darken($gold-color, 4%);
 }
 
 /* Table style from default design found at https://codepen.io/tomhodgins/pen/QEwvEK */
