separate ‘Visualize’ into two tabs: ‘Chart’ and ‘Map’

--- a/public/index.pug
+++ b/public/index.pug
@@ -26,7 +26,9 @@ html(lang="en")
             li
               a(ui-sref="explore") Explore 
             li
-              a(ui-sref="visualizations") Visualize
+              a(ui-sref="chart") Chart
+            li
+              a(ui-sref="map") Map
                               
           ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
             
