--- a/gt-book/_layouts/default.html
+++ b/gt-book/_layouts/default.html
@@ -12,11 +12,11 @@
         <div class="wrapper">
             <div class="site-nav">
               <div id="table">
-                <div class="search-box">
+                <!-- <div class="search-box">
                   <i class="material-icons">search</i>
                   <input type="text" id="search-input" placeholder="Search...">
                   <ul class="results-container" id="results-container"></ul>
-                </div>
+                </div> -->
 
                 <div class="session toc" style="display: flex; justify-content: space-between; padding: 10px 0px">
                   <b>Table of Contents</b>
