--- a/public/app.css
+++ b/public/app.css
@@ -309,6 +309,24 @@ input[type=checkbox], input[type=radio] {
     font-weight: 500;
 }
 
+.navbar-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 55px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #efefef;
+  margin-bottom: 0;
+  min-height: initial;
+}
+
+.navbar-main .navbar-nav>li>a {
+  padding: 5px 20px;
+  color: #444;
+  font-family: IBM Plex Sans;
+}
+
 sup {
   cursor: pointer;
   color: #666;
