--- a/public/index.pug
+++ b/public/index.pug
@@ -19,7 +19,7 @@ html(lang="en")
       a.site-title(href='https://ceserani.github.io/gt-book/') A World Made by Travel
       span.site-author Giovanna Ceserani
     nav
-      a(href='/gt-book/home') Table of Contents
+      a(href='https://ceserani.github.io/gt-book/home') Table of Contents
       a(href="#/").selected The Grand Tour Explorer
     
   div.site
