--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -9,3 +9,28 @@
         small Search and filter the database
         span.bottom start searching
         img(src=arrow.png)
+      box
+        h3 Explore 
+        small Browse and filter the database by multiple dimensions
+        span.bottom start exploring
+        img(src=arrow.png)
+      box
+        h3 Chart 
+        small Visualize and sort the travelers as dots
+        span.bottom start charting
+        img(src=arrow.png)
+      box
+        h3 Map 
+        small Visualize travel locations on interactive map
+        span.bottom start mapping
+        img(src=arrow.png)
+      box
+        h3 Data 
+        small Access stored data in Stanford Digital Repository
+        span.bottom external page
+        img(src=arrow.png)
+      box
+        h3 Glossary 
+        small Read descriptions of each data category
+        span.bottom read
+        img(src=arrow.png)
