--- a/public/app.css
+++ b/public/app.css
@@ -67,6 +67,7 @@ body {
 }
 
 .header .box {
+  display: block;
   flex-grow: 0;
   width: 195.5px;
   border-radius: 5px;
@@ -96,15 +97,11 @@ body {
   color: black;
 }
 
-.header .box .bottom {
-  font-family: 'IBM Plex Sans';
-  float: right;
+.header .box img {
   position: absolute;
   bottom: 10px;
   right: 10px;
-  text-decoration: none;
-  color: black;
-  font-weight: 600;
+  width: 19.5px;
 }
 
 .about-heading {
