--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -11,13 +11,13 @@
         a.box(ui-sref="explore")
           h3 Explore 
           p Browse and filter the database by multiple dimensions
-        a.box(ui-sref="explore")
+        a.box(ui-sref="chart")
           h3 Chart 
           p Visualize and sort the travelers as dots
-        a.box(ui-sref="explore")
+        a.box(ui-sref="map")
           h3 Map 
           p Visualize travel locations on interactive map
-        a.box(ui-sref="explore")
+        a.box(download,href="/GTE Coordinates.txt")
           h3 Data 
           p Access stored data in Stanford Digital Repository
             img(src='arrow-icon.png')
