--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -16,11 +16,11 @@
           p Visualize and sort the travelers as dots
         a.box(ui-sref="map")
           h3 Map 
-          p Visualize travel locations on interactive map
+          p Visualize travel locations on an interactive map
         a.box(download,href="/GTE Coordinates.txt")
           h3 Data 
           p Access stored data in Stanford Digital Repository
             img(src='arrow-icon.png')
         a.box(ui-sref="explore")
           h3 Glossary 
-          p Read descriptions of each data category
+          p Read descriptions of each data dimension
