--- a/public/about/about.pug
+++ b/public/about/about.pug
@@ -1,4 +1,4 @@
-.container.main-view
+.main-view
   h1 Terms of Use
 
   h2.text-serif(style="font-size: 28px; text-align: left; color: #d6bc73;") Copyright
