--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -1,4 +1,4 @@
-.container.main-view(ng-show="entry")
+.main-view(ng-show="entry")
     .row
         .col-lg-12
             .edit-status.alert.alert-warning
