--- a/public/index.pug
+++ b/public/index.pug
@@ -32,6 +32,9 @@ html(lang="en")
   body
 
   header.site-header
+    div.icon
+      a(href="https://ceserani.github.io/gt-book/home")
+        img(src='six-boxes.png')
     div
       a.site-title(href='https://ceserani.github.io/gt-book/') A World Made by Travel
       span.site-author Giovanna Ceserani
@@ -39,73 +42,97 @@ html(lang="en")
       a(href='https://ceserani.github.io/gt-book/home') Table of Contents
       a(href="#/").selected The Grand Tour Explorer
     
-  div.site
-    nav.navbar.navbar-main
-      .container
-        .navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(ui-sref="explore") Explore
-            li
-              a(ui-sref="search") Search 
-            li
-              a(ui-sref="chart") Chart
-            li
-              a(ui-sref="map") Map
+  div.main.site
+    div.page-content
+      div.wrapper
+        .site-nav
+          .session.toc(style='display: flex; justify-content: space-between; padding: 10px;')
+            a(href='https://ceserani.github.io/gt-book/home')
+              b Table of Contents
+          .session.active.hide
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/') Home
+            // 
+          .session
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/entering-a-world-made-by-travel') I.&#x9;Entering a World Made by Travel: Introducing the Explorer
+            // 
+          .session.gte.active
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='') II.&#x9;The Grand Tour Explorer: Travelers&rsquo; Lives and Journeys
+            #4.chapters
+              .chapter(ui-sref-active="active")
+                a(ui-sref="explore") Explore
+              .chapter(ui-sref-active="active")
+                a(ui-sref="search") Search 
+              .chapter(ui-sref-active="active")
+                a(ui-sref="chart") Chart
+              .chapter(ui-sref-active="active")
+                a(ui-sref="map") Map
+              .chapter(ui-sref-active="active")
+                a(href="#") Glossary
+              .chapter(ui-sref-active="active")
+                a(download,href="/GTE Coordinates.txt") Data
+          .session
+            a.session-title(href='https://ceserani.github.io/gt-book/scholars-essays/ceserani-introduction') III. Seven Scholars&rsquo; Essays: Using the Explorer
 
-          ul.nav.navbar-nav.navbar-right
-            li
-              a(href="#") Glossary
-            li
-              a(download,href="/GTE Coordinates.txt") Data  
-            li
-              a(href="#",type="button",ng-show="currentUser",ng-click="logout()") Logout       
-    
-    nav.navbar.navbar-default(ng-show="currentUser && currentUser.role!='viewer'")
-      .container
-        .navbar-header
-          a.navbar-brand(href="#/") The Grand Tour Explorer
-        .navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(ui-sref="explore") Explore
-            li
-              a(ui-sref="search") Search
-            li
-              a(ui-sref="chart") Chart
-            li
-              a(ui-sref="map") Map
-                              
-          ul.nav.navbar-nav.navbar-right(ng-show="currentUser")
-            
-            li(ng-show="currentUser.role=='admin'")
-              a(ui-sref="admin") Manage
-            li
-              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
-            li(ng-if="currentUser")
-                a(ui-sref="lists") Saved Lists
-            li.index-dropdown-wrapper
-              a Downloads
-              div.index-dropdown-content
-                a(href="GTE Bibliography.txt" download) Bibliography
-                a(href="GTE Coordinates.txt" download) Coordinates
-            li
-              a {{currentUser.fullName || currentUser.username}}
-            a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
-              //i.fa.fa-sign-out.margin-right
-              | Logout
+            // 
+          .session
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/presenting-the-data') IV. Presenting the Data: Categories and Schemas
+            // 
+          .session
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/archive-to-explorer') V.&#x9;Archive to Explorer: A Project History
+            // 
+          .session
+            a.session-title(href='https://ceserani.github.io/gt-book/in-the-classroom/introduction') VI.&#x9;The Explorer in the Classroom: a Teaching Companion
 
-          ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
-            li
-              a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
-            li
-              a(ui-sref="login" target="_blank") Saved Lists
-            li
-              a(ui-sref="login" target="_blank") Downloads
-            li
-              a(ui-sref="login") Login            
-    div.site-content
-      ui-view
+          .session
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/bibliography') Bibliography
+            // 
+          .session
+            // Preface and Acknowledgements, Epilogue
+            a.session-title(href='https://ceserani.github.io/gt-book/acknowledgements-and-credits') Acknowledgements and Credits
+            // 
+        article.post.container-fluid
+          nav.navbar.navbar-default(ng-show="currentUser && currentUser.role!='viewer'")
+            .container
+              .navbar-header
+                //- a.navbar-brand(href="#/") The Grand Tour Explorer
+              .navbar-collapse
+                                    
+                ul.nav.navbar-nav(ng-show="currentUser")
+                  
+                  li(ng-show="currentUser.role=='admin'")
+                    a(ui-sref="admin") Manage
+                  li
+                    a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
+                  li(ng-if="currentUser")
+                      a(ui-sref="lists") Saved Lists
+                  li.index-dropdown-wrapper
+                    a Downloads
+                    div.index-dropdown-content
+                      a(href="GTE Bibliography.txt" download) Bibliography
+                      a(href="GTE Coordinates.txt" download) Coordinates
+                  li
+                    a {{currentUser.fullName || currentUser.username}}
+                  a.btn.btn-default.btn-sm.navbar-btn.navbar-right(type="button", ng-click="logout()")
+                    //i.fa.fa-sign-out.margin-right
+                    | Logout
+
+                ul.nav.navbar-nav.navbar-right(ng-show="!currentUser")
+                  li
+                    a(href="https://forms.gle/iywimg8HHe4hH1xS8" target="_blank") Report an issue
+                  li
+                    a(ui-sref="login" target="_blank") Saved Lists
+                  li
+                    a(ui-sref="login" target="_blank") Downloads
+                  li
+                    a(ui-sref="login") Login            
+          div.site-content
+            ui-view
 
   footer.site-footer
     div
