--- a/public/index.pug
+++ b/public/index.pug
@@ -70,9 +70,9 @@ html(lang="en")
               .chapter(ui-sref-active="active")
                 a(ui-sref="map") Map
               .chapter(ui-sref-active="active")
-                a(href="#") Glossary
+                a(href="https://ceserani.github.io/gt-book/the-grand-tour-explorer/glossary") Glossary
               .chapter(ui-sref-active="active")
-                a(download,href="/GTE Coordinates.txt") Data
+                a(download,href="https://ceserani.github.io/gt-book/the-grand-tour-explorer/data") Data
           .session
             a.session-title(href='https://ceserani.github.io/gt-book/scholars-essays/ceserani-introduction') III. Seven Scholars&rsquo; Essays: Using the Explorer
 
